# nref

./: .gitignore  CMakeLists.txt  README.md  nref_example.cpp
include/nrx/ref/: nref.hpp  nref_dsl.hpp
tests/: test_basic.cpp  test_main.cpp  test_peer_lifetime.cpp
